// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GraphicContent /> Should render correctly 1`] = `
<div>
  <div
    class="graphic-content__outer-container"
  >
    <div
      class="graphic-content__content-container graphic-content__content-container--hidden"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="graphic-content__warning-container"
    >
      <div
        class="graphic-content__warning-container__inner"
      >
        <div
          class="graphic-content__text"
        >
          This image contains graphic content
        </div>
        <br />
        <button
          class="sc-dkzDqf kHuqxu graphic-content__text"
          type="button"
        >
          <span
            class="sc-eCYdqJ ghZAyu"
          >
            Show graphic content
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GraphicContent /> Should render correctly with contentInView 1`] = `
<div>
  <div
    class="graphic-content__outer-container"
  >
    <div
      class="graphic-content__content-container"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`<GraphicContent /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="graphic-content__outer-container test-custom-className"
  >
    <div
      class="graphic-content__content-container graphic-content__content-container--hidden"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="graphic-content__warning-container"
    >
      <div
        class="graphic-content__warning-container__inner"
      >
        <div
          class="graphic-content__text"
        >
          This image contains graphic content
        </div>
        <br />
        <button
          class="sc-dkzDqf kHuqxu graphic-content__text"
          type="button"
        >
          <span
            class="sc-eCYdqJ ghZAyu"
          >
            Show graphic content
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
